--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,33 +3,35 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-        steps:
-            - uses: actions/checkout@v3
+    steps:
+    - uses: actions/checkout@v4
 
-            - name: Set up Python
-              uses: actions/setup-python@v3
-              with:
-                  python-version: '3.9'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
 
-            - name: Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install -r requirements.txt
-                  pip install pytest pytest-django pytest-cov
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pytest pytest-django pytest-cov
 
-            - name: Run tests
-              env:
-                  DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-                  DJANGO_DEBUG: 'True'
-                  DJANGO_ALLOWED_HOSTS: 'localhost,127.0.0.1'
-              run: |
-                  python ./backend/manage.py migrate
-                  pytest --maxfail=10 --disable-warnings --cov=. --cov-report=xml
+    - name: Run tests
+      env:
+        DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+        DJANGO_DEBUG: 'True'
+        DJANGO_ALLOWED_HOSTS: 'localhost,127.0.0.1'
+        DJANGO_SETTINGS_MODULE: 'receipt_processor.settings'
+      run: |
+        cd backend
+        python manage.py migrate
+        pytest --cov --cov-report=xml
 
-            - name: Upload coverage to Codecov
-              uses: codecov/codecov-action@v2
-              with:
-                  token: ${{ secrets.CODECOV_TOKEN }}
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
