--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
     web:
         build: .
@@ -13,3 +11,8 @@ services:
             - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
             - DJANGO_DEBUG=${DJANGO_DEBUG}
             - DJANGO_ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
+            - CACHE_URL=redis://redis:6379/1
+    redis:
+        image: redis:latest
+        ports:
+        - '6379:6379'
