--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,48 @@ jobs:
       with:
         python-version: '3.9'
 
+    - name: Cache pip
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pytest pytest-django pytest-cov
+
+    - name: Run linting
+      run: |
+        flake8 .
+
+    - name: Run migrations
+      env:
+        DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+        DJANGO_DEBUG: 'True'
+        DJANGO_ALLOWED_HOSTS: 'localhost,127.0.0.1'
+        DJANGO_SETTINGS_MODULE: 'receipt_processor.settings'
+      run: |
+        cd backend
+        python manage.py migrate
+
+    # - name: Run tests
+    #   env:
+    #     DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+    #     DJANGO_DEBUG: 'True'
+    #     DJANGO_ALLOWED_HOSTS: 'localhost,127.0.0.1'
+    #     DJANGO_SETTINGS_MODULE: 'receipt_processor.settings'
+    #   run: |
+    #     cd backend
+    #     pytest --cov --cov-report=xml
+
+    # - name: Upload coverage to Codecov
+    #   uses: codecov/codecov-action@v4
+    #   with:
+    #     token: ${{ secrets.CODECOV_TOKEN }}
 
     - name: Run tests
       env:
@@ -28,10 +65,20 @@ jobs:
         DJANGO_SETTINGS_MODULE: 'receipt_processor.settings'
       run: |
         cd backend
-        python manage.py migrate
-        pytest --cov --cov-report=xml
+        pytest --maxfail=10 --disable-warnings --cov=. --cov-report=xml --junitxml=reports/junit/test-results.xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        files: ./backend/coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: true
+
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-results
+        path: backend/reports/junit/test-results.xml
